--- a/index.html
+++ b/index.html
@@ -3,63 +3,97 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AgriNexus World - 통합 허브</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>AgriNexus World - 전체 기능 포털</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100">
+<body class="bg-gray-100 text-gray-800">
+
   <!-- Header -->
   <header class="bg-green-700 text-white text-center py-6 shadow">
-    <h1 class="text-2xl font-bold">🌍 AgriNexus World 전자동화 디지털 허브</h1>
+    <h1 class="text-3xl font-bold">AgriNexus World 🌍 전체 기능 통합 포털</h1>
+    <p class="text-sm mt-1">스마트팜 · 계약서 · 물류 · 설계 · 보고서 · 이메일 · 분석 · 투자</p>
   </header>
 
-  <!-- Main Content -->
-  <main class="p-6 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-    <div class="bg-white rounded-2xl shadow p-6 hover:scale-[1.02] transition">
-      <h3 class="text-xl font-semibold mb-2">📄 계약 자동 생성</h3>
-      <p class="text-gray-700">전자서명 포함, 다국어 계약 지원 시스템</p>
-      <a href="/contract" class="inline-block mt-4 px-4 py-2 bg-green-600 text-white rounded-xl">계약 모듈</a>
+  <!-- Section: 계약 및 문서 자동화 -->
+  <section class="p-6">
+    <h2 class="text-2xl font-bold text-green-700 mb-4">📄 계약 및 문서 자동화</h2>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+      <a href="/contract" class="block bg-white rounded-xl shadow p-5 hover:shadow-lg">
+        <h3 class="text-xl font-semibold mb-1">계약서 자동 생성</h3>
+        <p>전자서명, 조항별 설명, 다국어 계약 자동 생성</p>
+      </a>
+      <a href="/report" class="block bg-white rounded-xl shadow p-5 hover:shadow-lg">
+        <h3 class="text-xl font-semibold mb-1">보고서 / ROI 리포트</h3>
+        <p>수익률 분석 및 PDF 보고서 자동 출력</p>
+      </a>
+      <a href="/email" class="block bg-white rounded-xl shadow p-5 hover:shadow-lg">
+        <h3 class="text-xl font-semibold mb-1">이메일 제출 시스템</h3>
+        <p>계약서, 보고서 PDF를 자동 이메일 전송</p>
+      </a>
     </div>
-    <div class="bg-white rounded-2xl shadow p-6 hover:scale-[1.02] transition">
-      <h3 class="text-xl font-semibold mb-2">📊 ROI / 보고서</h3>
-      <p class="text-gray-700">투자 분석 및 보고서 자동 PDF 생성</p>
-      <a href="/report" class="inline-block mt-4 px-4 py-2 bg-green-600 text-white rounded-xl">보고서</a>
+  </section>
+
+  <!-- Section: AI 설계 / 시뮬레이션 -->
+  <section class="p-6">
+    <h2 class="text-2xl font-bold text-green-700 mb-4">🤖 AI 설계 / 시뮬레이션</h2>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+      <a href="/ai" class="block bg-white rounded-xl shadow p-5 hover:shadow-lg">
+        <h3 class="text-xl font-semibold mb-1">스마트팜 설계</h3>
+        <p>도면 기반 AI 설계, 자재 자동 추천</p>
+      </a>
+      <a href="/simulation" class="block bg-white rounded-xl shadow p-5 hover:shadow-lg">
+        <h3 class="text-xl font-semibold mb-1">시뮬레이션 영상 생성</h3>
+        <p>AI 설계 기반 3D 영상 + 음성 설명</p>
+      </a>
+      <a href="/upgrade" class="block bg-white rounded-xl shadow p-5 hover:shadow-lg">
+        <h3 class="text-xl font-semibold mb-1">AI 업그레이드 추천</h3>
+        <p>사용자 활동 기반 기능 자동 제안</p>
+      </a>
     </div>
-    <div class="bg-white rounded-2xl shadow p-6 hover:scale-[1.02] transition">
-      <h3 class="text-xl font-semibold mb-2">🛰 위성 물류 추적</h3>
-      <p class="text-gray-700">실시간 글로벌 배송 상태 시각화</p>
-      <a href="/satellite" class="inline-block mt-4 px-4 py-2 bg-green-600 text-white rounded-xl">물류</a>
+  </section>
+
+  <!-- Section: 물류 / 위성 추적 -->
+  <section class="p-6">
+    <h2 class="text-2xl font-bold text-green-700 mb-4">🛰 물류 / 위성 기반 시스템</h2>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+      <a href="/satellite" class="block bg-white rounded-xl shadow p-5 hover:shadow-lg">
+        <h3 class="text-xl font-semibold mb-1">위성 물류 시각화</h3>
+        <p>항공, 선박, 육로 실시간 추적</p>
+      </a>
+      <a href="/delivery" class="block bg-white rounded-xl shadow p-5 hover:shadow-lg">
+        <h3 class="text-xl font-semibold mb-1">글로벌 배송 최적화</h3>
+        <p>물류비 비교, 수출입 문서 자동화</p>
+      </a>
+      <a href="/retarget" class="block bg-white rounded-xl shadow p-5 hover:shadow-lg">
+        <h3 class="text-xl font-semibold mb-1">이탈 고객 자동 복귀</h3>
+        <p>쿠폰, 메시지, 복귀 유도 흐름 구성</p>
+      </a>
     </div>
-    <div class="bg-white rounded-2xl shadow p-6 hover:scale-[1.02] transition">
-      <h3 class="text-xl font-semibold mb-2">🤖 AI 스마트팜 설계</h3>
-      <p class="text-gray-700">환경·도면 기반 자동화 설계 및 시뮬레이션</p>
-      <a href="/ai" class="inline-block mt-4 px-4 py-2 bg-green-600 text-white rounded-xl">AI 설계</a>
+  </section>
+
+  <!-- Section: 투자 / 수익 분석 -->
+  <section class="p-6">
+    <h2 class="text-2xl font-bold text-green-700 mb-4">💰 투자 및 수익 분석</h2>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+      <a href="/admin" class="block bg-white rounded-xl shadow p-5 hover:shadow-lg">
+        <h3 class="text-xl font-semibold mb-1">관리자 대시보드</h3>
+        <p>수익률, 리포트, 계약서 통계 대시보드</p>
+      </a>
+      <a href="/ir" class="block bg-white rounded-xl shadow p-5 hover:shadow-lg">
+        <h3 class="text-xl font-semibold mb-1">IR 보고서 생성</h3>
+        <p>투자자 제출용 자동 리포트 생성</p>
+      </a>
+      <a href="/future" class="block bg-white rounded-xl shadow p-5 hover:shadow-lg">
+        <h3 class="text-xl font-semibold mb-1">미래 확장 시스템</h3>
+        <p>PWA 설치형 앱, 자동 결제, GPT 연동 등</p>
+      </a>
     </div>
-    <div class="bg-white rounded-2xl shadow p-6 hover:scale-[1.02] transition">
-      <h3 class="text-xl font-semibold mb-2">📬 이메일 제출</h3>
-      <p class="text-gray-700">계약서/리포트 이메일 제출 + 통계</p>
-      <a href="/email" class="inline-block mt-4 px-4 py-2 bg-green-600 text-white rounded-xl">이메일 발송</a>
-    </div>
-    <div class="bg-white rounded-2xl shadow p-6 hover:scale-[1.02] transition">
-      <h3 class="text-xl font-semibold mb-2">📈 업그레이드 추천</h3>
-      <p class="text-gray-700">사용자 맞춤 AI 기반 기능 제안</p>
-      <a href="/upgrade" class="inline-block mt-4 px-4 py-2 bg-green-600 text-white rounded-xl">추천 기능</a>
-    </div>
-    <div class="bg-white rounded-2xl shadow p-6 hover:scale-[1.02] transition">
-      <h3 class="text-xl font-semibold mb-2">🎯 고객 복귀 자동화</h3>
-      <p class="text-gray-700">쿠폰/리마인더 기반 이탈 사용자 복귀</p>
-      <a href="/retarget" class="inline-block mt-4 px-4 py-2 bg-green-600 text-white rounded-xl">CRM 리타겟팅</a>
-    </div>
-    <div class="bg-white rounded-2xl shadow p-6 hover:scale-[1.02] transition">
-      <h3 class="text-xl font-semibold mb-2">🚀 미래 확장 기능</h3>
-      <p class="text-gray-700">PWA 설치형 앱, GPT 제안, 자동 결제 연결</p>
-      <a href="/future" class="inline-block mt-4 px-4 py-2 bg-green-600 text-white rounded-xl">확장 영역</a>
-    </div>
-  </main>
+  </section>
 
   <!-- Footer -->
   <footer class="bg-gray-200 text-center text-sm text-gray-600 py-4">
-    © 2025 AgriNexus World - 자동 진화형 스마트 플랫폼
+    © 2025 AgriNexus World - 전자동화 글로벌 스마트 플랫폼
   </footer>
 </body>
 </html>
