--- a/index.html
+++ b/index.html
@@ -4,96 +4,104 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>AgriNexus World - 전체 기능 포털</title>
+  <title>AgriNexus World - 전체 자동화 플랫폼</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 text-gray-800">
 
-  <!-- Header -->
-  <header class="bg-green-700 text-white text-center py-6 shadow">
-    <h1 class="text-3xl font-bold">AgriNexus World 🌍 전체 기능 통합 포털</h1>
-    <p class="text-sm mt-1">스마트팜 · 계약서 · 물류 · 설계 · 보고서 · 이메일 · 분석 · 투자</p>
+  <header class="bg-green-800 text-white text-center py-6 shadow">
+    <h1 class="text-3xl font-bold">🌍 AgriNexus World 통합 자동화 플랫폼</h1>
+    <p class="text-sm mt-1">계약 · 설계 · 물류 · 투자 · AI · 보고서 · 자동화 · 글로벌 운영까지</p>
   </header>
 
-  <!-- Section: 계약 및 문서 자동화 -->
-  <section class="p-6">
-    <h2 class="text-2xl font-bold text-green-700 mb-4">📄 계약 및 문서 자동화</h2>
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-      <a href="/contract" class="block bg-white rounded-xl shadow p-5 hover:shadow-lg">
-        <h3 class="text-xl font-semibold mb-1">계약서 자동 생성</h3>
-        <p>전자서명, 조항별 설명, 다국어 계약 자동 생성</p>
-      </a>
-      <a href="/report" class="block bg-white rounded-xl shadow p-5 hover:shadow-lg">
-        <h3 class="text-xl font-semibold mb-1">보고서 / ROI 리포트</h3>
-        <p>수익률 분석 및 PDF 보고서 자동 출력</p>
-      </a>
-      <a href="/email" class="block bg-white rounded-xl shadow p-5 hover:shadow-lg">
-        <h3 class="text-xl font-semibold mb-1">이메일 제출 시스템</h3>
-        <p>계약서, 보고서 PDF를 자동 이메일 전송</p>
-      </a>
-    </div>
-  </section>
+  <main class="p-6 space-y-10">
+    <!-- Section 1 -->
+    <section>
+      <h2 class="text-2xl font-bold text-green-700 mb-4">📄 계약 및 문서 자동화</h2>
+      <ul class="list-disc pl-6 space-y-2">
+        <li>계약서 자동 생성 (조항 요약, 번역 포함)</li>
+        <li>전자서명 시스템</li>
+        <li>다국어 계약 변환</li>
+        <li>PDF 자동 저장 및 이메일 제출</li>
+        <li>보안등급, 유효기간 알림 자동 적용</li>
+        <li>관리자 제출 및 통계 저장</li>
+      </ul>
+    </section>
 
-  <!-- Section: AI 설계 / 시뮬레이션 -->
-  <section class="p-6">
-    <h2 class="text-2xl font-bold text-green-700 mb-4">🤖 AI 설계 / 시뮬레이션</h2>
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-      <a href="/ai" class="block bg-white rounded-xl shadow p-5 hover:shadow-lg">
-        <h3 class="text-xl font-semibold mb-1">스마트팜 설계</h3>
-        <p>도면 기반 AI 설계, 자재 자동 추천</p>
-      </a>
-      <a href="/simulation" class="block bg-white rounded-xl shadow p-5 hover:shadow-lg">
-        <h3 class="text-xl font-semibold mb-1">시뮬레이션 영상 생성</h3>
-        <p>AI 설계 기반 3D 영상 + 음성 설명</p>
-      </a>
-      <a href="/upgrade" class="block bg-white rounded-xl shadow p-5 hover:shadow-lg">
-        <h3 class="text-xl font-semibold mb-1">AI 업그레이드 추천</h3>
-        <p>사용자 활동 기반 기능 자동 제안</p>
-      </a>
-    </div>
-  </section>
+    <!-- Section 2 -->
+    <section>
+      <h2 class="text-2xl font-bold text-green-700 mb-4">🤖 AI 설계 / 시뮬레이션</h2>
+      <ul class="list-disc pl-6 space-y-2">
+        <li>도면 기반 스마트팜 설계 자동 생성</li>
+        <li>최적 자재, 브랜드, 설비 자동 추천</li>
+        <li>3D 시뮬레이션 + 음성 내레이션 생성</li>
+        <li>IR 프레젠테이션 자동 구성</li>
+        <li>시공 단계별 비용/내구성 분석</li>
+      </ul>
+    </section>
 
-  <!-- Section: 물류 / 위성 추적 -->
-  <section class="p-6">
-    <h2 class="text-2xl font-bold text-green-700 mb-4">🛰 물류 / 위성 기반 시스템</h2>
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-      <a href="/satellite" class="block bg-white rounded-xl shadow p-5 hover:shadow-lg">
-        <h3 class="text-xl font-semibold mb-1">위성 물류 시각화</h3>
-        <p>항공, 선박, 육로 실시간 추적</p>
-      </a>
-      <a href="/delivery" class="block bg-white rounded-xl shadow p-5 hover:shadow-lg">
-        <h3 class="text-xl font-semibold mb-1">글로벌 배송 최적화</h3>
-        <p>물류비 비교, 수출입 문서 자동화</p>
-      </a>
-      <a href="/retarget" class="block bg-white rounded-xl shadow p-5 hover:shadow-lg">
-        <h3 class="text-xl font-semibold mb-1">이탈 고객 자동 복귀</h3>
-        <p>쿠폰, 메시지, 복귀 유도 흐름 구성</p>
-      </a>
-    </div>
-  </section>
+    <!-- Section 3 -->
+    <section>
+      <h2 class="text-2xl font-bold text-green-700 mb-4">🛰 물류 / 위성 기반 운영</h2>
+      <ul class="list-disc pl-6 space-y-2">
+        <li>위성 기반 글로벌 물류 시각화</li>
+        <li>배송비 비교, 운송 최적 경로 자동 계산</li>
+        <li>실시간 배송 추적 시스템</li>
+        <li>수출입 문서, 관세 자동 생성</li>
+        <li>국가별 배송 규정 자동 반영</li>
+      </ul>
+    </section>
 
-  <!-- Section: 투자 / 수익 분석 -->
-  <section class="p-6">
-    <h2 class="text-2xl font-bold text-green-700 mb-4">💰 투자 및 수익 분석</h2>
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-      <a href="/admin" class="block bg-white rounded-xl shadow p-5 hover:shadow-lg">
-        <h3 class="text-xl font-semibold mb-1">관리자 대시보드</h3>
-        <p>수익률, 리포트, 계약서 통계 대시보드</p>
-      </a>
-      <a href="/ir" class="block bg-white rounded-xl shadow p-5 hover:shadow-lg">
-        <h3 class="text-xl font-semibold mb-1">IR 보고서 생성</h3>
-        <p>투자자 제출용 자동 리포트 생성</p>
-      </a>
-      <a href="/future" class="block bg-white rounded-xl shadow p-5 hover:shadow-lg">
-        <h3 class="text-xl font-semibold mb-1">미래 확장 시스템</h3>
-        <p>PWA 설치형 앱, 자동 결제, GPT 연동 등</p>
-      </a>
-    </div>
-  </section>
+    <!-- Section 4 -->
+    <section>
+      <h2 class="text-2xl font-bold text-green-700 mb-4">📊 보고서 / 분석 / 리포트</h2>
+      <ul class="list-disc pl-6 space-y-2">
+        <li>ROI 수익률 분석 및 자동 리포트</li>
+        <li>PDF 출력 + IR 보고서 자동화</li>
+        <li>이메일 전송 및 관리자 저장 시스템</li>
+        <li>조건별 사용자 보고서 자동 생성</li>
+        <li>성과 기반 시각 대시보드</li>
+      </ul>
+    </section>
 
-  <!-- Footer -->
-  <footer class="bg-gray-200 text-center text-sm text-gray-600 py-4">
-    © 2025 AgriNexus World - 전자동화 글로벌 스마트 플랫폼
+    <!-- Section 5 -->
+    <section>
+      <h2 class="text-2xl font-bold text-green-700 mb-4">💰 투자 / 수익 자동화</h2>
+      <ul class="list-disc pl-6 space-y-2">
+        <li>관리자 대시보드 (수익/비용/예측)</li>
+        <li>자동 IR 보고서 + 계약 연동</li>
+        <li>투자자 맞춤 문서 제출</li>
+        <li>수익 기반 요금제 및 가성비 분석</li>
+        <li>실시간 투자 제안 시스템</li>
+      </ul>
+    </section>
+
+    <!-- Section 6 -->
+    <section>
+      <h2 class="text-2xl font-bold text-green-700 mb-4">🧠 AI 기반 사용자 맞춤 자동화</h2>
+      <ul class="list-disc pl-6 space-y-2">
+        <li>활동 기반 업그레이드 제안</li>
+        <li>리타겟팅 / 쿠폰 / 복귀 유도 자동화</li>
+        <li>AI 고객 분석 및 채팅 시스템 연동</li>
+        <li>주간 보고서 / 알림 자동 발송</li>
+      </ul>
+    </section>
+
+    <!-- Section 7 -->
+    <section>
+      <h2 class="text-2xl font-bold text-green-700 mb-4">🌐 글로벌 운영 / 확장 시스템</h2>
+      <ul class="list-disc pl-6 space-y-2">
+        <li>PWA 모바일 앱 설치형 구성</li>
+        <li>GPT 상담 / 계약요약 / 추천시스템 연동</li>
+        <li>국가별 인증, 수출입 정책 자동 반영</li>
+        <li>다국어 계약, 보고서, UI 전환</li>
+        <li>글로벌 투자 대응 자동화</li>
+      </ul>
+    </section>
+  </main>
+
+  <footer class="bg-gray-200 text-center text-sm text-gray-600 py-4 mt-10">
+    © 2025 AgriNexus World - 세계 최고 수준 자동화 플랫폼
   </footer>
 </body>
 </html>
