--- a/index.html
+++ b/index.html
@@ -2,23 +2,22 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>AgriNexus World - 전체 자동화 플랫폼</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AgriNexus World - 통합 자동화 플랫폼</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 text-gray-800">
+<body class="bg-gray-50 text-gray-800">
 
-  <header class="bg-green-800 text-white text-center py-6 shadow">
+  <header class="bg-green-900 text-white py-6 text-center shadow">
     <h1 class="text-3xl font-bold">🌍 AgriNexus World 통합 자동화 플랫폼</h1>
     <p class="text-sm mt-1">계약 · 설계 · 물류 · 투자 · AI · 보고서 · 자동화 · 글로벌 운영까지</p>
   </header>
 
-  <main class="p-6 space-y-10">
-    <!-- Section 1 -->
+  <main class="p-8 max-w-5xl mx-auto space-y-12 text-base">
     <section>
-      <h2 class="text-2xl font-bold text-green-700 mb-4">📄 계약 및 문서 자동화</h2>
-      <ul class="list-disc pl-6 space-y-2">
+      <h2 class="text-xl font-bold text-green-800 mb-2">📄 계약 및 문서 자동화</h2>
+      <ul class="list-disc ml-6 space-y-1">
         <li>계약서 자동 생성 (조항 요약, 번역 포함)</li>
         <li>전자서명 시스템</li>
         <li>다국어 계약 변환</li>
@@ -28,10 +27,9 @@
       </ul>
     </section>
 
-    <!-- Section 2 -->
     <section>
-      <h2 class="text-2xl font-bold text-green-700 mb-4">🤖 AI 설계 / 시뮬레이션</h2>
-      <ul class="list-disc pl-6 space-y-2">
+      <h2 class="text-xl font-bold text-purple-700 mb-2">🤖 AI 설계 / 시뮬레이션</h2>
+      <ul class="list-disc ml-6 space-y-1">
         <li>도면 기반 스마트팜 설계 자동 생성</li>
         <li>최적 자재, 브랜드, 설비 자동 추천</li>
         <li>3D 시뮬레이션 + 음성 내레이션 생성</li>
@@ -40,10 +38,9 @@
       </ul>
     </section>
 
-    <!-- Section 3 -->
     <section>
-      <h2 class="text-2xl font-bold text-green-700 mb-4">🛰 물류 / 위성 기반 운영</h2>
-      <ul class="list-disc pl-6 space-y-2">
+      <h2 class="text-xl font-bold text-indigo-800 mb-2">🛰 물류 / 위성 기반 운영</h2>
+      <ul class="list-disc ml-6 space-y-1">
         <li>위성 기반 글로벌 물류 시각화</li>
         <li>배송비 비교, 운송 최적 경로 자동 계산</li>
         <li>실시간 배송 추적 시스템</li>
@@ -52,10 +49,9 @@
       </ul>
     </section>
 
-    <!-- Section 4 -->
     <section>
-      <h2 class="text-2xl font-bold text-green-700 mb-4">📊 보고서 / 분석 / 리포트</h2>
-      <ul class="list-disc pl-6 space-y-2">
+      <h2 class="text-xl font-bold text-blue-800 mb-2">📊 보고서 / 분석 / 리포트</h2>
+      <ul class="list-disc ml-6 space-y-1">
         <li>ROI 수익률 분석 및 자동 리포트</li>
         <li>PDF 출력 + IR 보고서 자동화</li>
         <li>이메일 전송 및 관리자 저장 시스템</li>
@@ -64,10 +60,9 @@
       </ul>
     </section>
 
-    <!-- Section 5 -->
     <section>
-      <h2 class="text-2xl font-bold text-green-700 mb-4">💰 투자 / 수익 자동화</h2>
-      <ul class="list-disc pl-6 space-y-2">
+      <h2 class="text-xl font-bold text-orange-600 mb-2">💰 투자 / 수익 자동화</h2>
+      <ul class="list-disc ml-6 space-y-1">
         <li>관리자 대시보드 (수익/비용/예측)</li>
         <li>자동 IR 보고서 + 계약 연동</li>
         <li>투자자 맞춤 문서 제출</li>
@@ -76,10 +71,9 @@
       </ul>
     </section>
 
-    <!-- Section 6 -->
     <section>
-      <h2 class="text-2xl font-bold text-green-700 mb-4">🧠 AI 기반 사용자 맞춤 자동화</h2>
-      <ul class="list-disc pl-6 space-y-2">
+      <h2 class="text-xl font-bold text-pink-600 mb-2">🧠 AI 기반 사용자 맞춤 자동화</h2>
+      <ul class="list-disc ml-6 space-y-1">
         <li>활동 기반 업그레이드 제안</li>
         <li>리타겟팅 / 쿠폰 / 복귀 유도 자동화</li>
         <li>AI 고객 분석 및 채팅 시스템 연동</li>
@@ -87,10 +81,9 @@
       </ul>
     </section>
 
-    <!-- Section 7 -->
     <section>
-      <h2 class="text-2xl font-bold text-green-700 mb-4">🌐 글로벌 운영 / 확장 시스템</h2>
-      <ul class="list-disc pl-6 space-y-2">
+      <h2 class="text-xl font-bold text-teal-700 mb-2">🌐 글로벌 운영 / 확장 시스템</h2>
+      <ul class="list-disc ml-6 space-y-1">
         <li>PWA 모바일 앱 설치형 구성</li>
         <li>GPT 상담 / 계약요약 / 추천시스템 연동</li>
         <li>국가별 인증, 수출입 정책 자동 반영</li>
