--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AgriNexus World - 통합 자동화 플랫폼</title>
+  <title>AgriNexus World - 세부 기능 통합 사이트</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-50 text-gray-800">
@@ -14,7 +14,7 @@
     <p class="text-sm mt-1">계약 · 설계 · 물류 · 투자 · AI · 보고서 · 자동화 · 글로벌 운영까지</p>
   </header>
 
-  <main class="p-8 max-w-5xl mx-auto space-y-12 text-base">
+  <main class="p-8 max-w-6xl mx-auto space-y-12 text-base leading-relaxed">
     <section>
       <h2 class="text-xl font-bold text-green-800 mb-2">📄 계약 및 문서 자동화</h2>
       <ul class="list-disc ml-6 space-y-1">
