--- a/index.html
+++ b/index.html
@@ -3,85 +3,59 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>AgriNexus World - 통합 자동화 시스템</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AgriNexus World | 글로벌 스마트팜 자동화 플랫폼</title>
+  <meta name="description" content="AI 기반 설계, 계약, 물류, 투자 시스템까지 완전 자동화된 스마트팜 통합 플랫폼" />
+  <meta name="robots" content="index, follow" />
+  <link rel="icon" href="/favicon.ico" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-white text-gray-900">
+<body class="bg-white text-gray-900 font-sans">
 
   <!-- Hero Section -->
-  <section class="bg-gradient-to-r from-green-600 to-green-800 text-white py-14 px-6 text-center">
-    <h1 class="text-4xl font-bold">AgriNexus World</h1>
-    <p class="text-lg mt-2">스마트팜 전체 자동화 플랫폼 – 계약, 설계, 물류, 투자까지 모두 한 번에</p>
-    <div class="mt-6 flex justify-center gap-4 flex-wrap">
-      <a href="#features" class="bg-white text-green-800 px-6 py-3 rounded-full font-semibold hover:bg-gray-100">전체 기능 보기</a>
-      <a href="#start" class="bg-green-900 px-6 py-3 rounded-full font-semibold hover:bg-green-700 text-white">지금 시작하기</a>
+  <section class="bg-gradient-to-r from-green-600 to-green-800 text-white py-20 px-6 text-center shadow">
+    <h1 class="text-4xl font-bold mb-4">AgriNexus World</h1>
+    <p class="text-lg max-w-2xl mx-auto">세계 최고 수준의 스마트팜 자동화 플랫폼 – 설계, 계약, 물류, 투자까지 한 번에</p>
+    <div class="mt-6 space-x-4">
+      <a href="#features" class="bg-white text-green-800 px-6 py-3 rounded-full font-semibold hover:bg-gray-100 transition">전체 기능 보기</a>
+      <a href="#contact" class="bg-green-900 px-6 py-3 rounded-full font-semibold hover:bg-green-700">상담 문의</a>
     </div>
   </section>
 
-  <!-- Feature Section -->
-  <section id="features" class="py-16 px-6 bg-gray-50">
-    <div class="max-w-6xl mx-auto grid md:grid-cols-3 gap-10 text-sm">
+  <!-- Feature Grid -->
+  <section id="features" class="py-20 px-6 bg-gray-50">
+    <div class="max-w-6xl mx-auto grid md:grid-cols-3 gap-10">
       <div>
-        <h3 class="text-green-700 font-bold text-lg mb-2">📄 계약 및 문서 자동화</h3>
-        <ul class="list-disc ml-5 space-y-1">
-          <li><a href="/contract" class="hover:underline">계약서 자동 생성 및 전자서명</a></li>
-          <li><a href="/contract" class="hover:underline">다국어 변환 및 PDF 저장</a></li>
-          <li><a href="/contract" class="hover:underline">보안등급 및 유효기간 관리</a></li>
-        </ul>
+        <h3 class="text-green-700 font-semibold text-lg mb-2">📄 계약 자동화</h3>
+        <p class="text-sm text-gray-700">계약서 생성, 전자서명, 다국어, PDF 자동 저장 및 제출</p>
       </div>
       <div>
-        <h3 class="text-blue-600 font-bold text-lg mb-2">📊 보고서 / 분석</h3>
-        <ul class="list-disc ml-5 space-y-1">
-          <li><a href="/report" class="hover:underline">ROI 리포트 자동화</a></li>
-          <li><a href="/report" class="hover:underline">성과 기반 대시보드</a></li>
-          <li><a href="/report" class="hover:underline">PDF + 이메일 제출 시스템</a></li>
-        </ul>
+        <h3 class="text-purple-700 font-semibold text-lg mb-2">🤖 AI 설계</h3>
+        <p class="text-sm text-gray-700">스마트팜 설계 자동화, 자재 추천, 시뮬레이션 영상 생성</p>
       </div>
       <div>
-        <h3 class="text-purple-700 font-bold text-lg mb-2">🤖 AI 설계 / 시뮬레이션</h3>
-        <ul class="list-disc ml-5 space-y-1">
-          <li><a href="/ai" class="hover:underline">도면 기반 설계 자동화</a></li>
-          <li><a href="/ai" class="hover:underline">시뮬레이션 영상/음성 포함</a></li>
-          <li><a href="/ai" class="hover:underline">IR 프레젠테이션 자동 구성</a></li>
-        </ul>
+        <h3 class="text-blue-700 font-semibold text-lg mb-2">🛰 물류 시스템</h3>
+        <p class="text-sm text-gray-700">위성 기반 물류 추적, 수출입 서류, 글로벌 배송 자동화</p>
       </div>
       <div>
-        <h3 class="text-indigo-700 font-bold text-lg mb-2">🛰 물류 / 위성 기반 운영</h3>
-        <ul class="list-disc ml-5 space-y-1">
-          <li><a href="/satellite" class="hover:underline">실시간 위성 물류 추적</a></li>
-          <li><a href="/delivery" class="hover:underline">글로벌 배송비 비교 자동화</a></li>
-          <li><a href="/delivery" class="hover:underline">수출입 문서 자동 생성</a></li>
-        </ul>
+        <h3 class="text-pink-600 font-semibold text-lg mb-2">📊 보고서 / 분석</h3>
+        <p class="text-sm text-gray-700">ROI 리포트, 성과 대시보드, 이메일 제출 시스템</p>
       </div>
       <div>
-        <h3 class="text-orange-600 font-bold text-lg mb-2">💰 투자 자동화</h3>
-        <ul class="list-disc ml-5 space-y-1">
-          <li><a href="/admin" class="hover:underline">IR 자동 생성 및 제출</a></li>
-          <li><a href="/admin" class="hover:underline">수익 요금제 분석 시스템</a></li>
-          <li><a href="/admin" class="hover:underline">실시간 투자 제안 기능</a></li>
-        </ul>
+        <h3 class="text-orange-600 font-semibold text-lg mb-2">💰 투자 시스템</h3>
+        <p class="text-sm text-gray-700">IR 자동 생성, 요금제 분석, 실시간 투자 제안</p>
       </div>
       <div>
-        <h3 class="text-pink-500 font-bold text-lg mb-2">🧠 사용자 자동화</h3>
-        <ul class="list-disc ml-5 space-y-1">
-          <li><a href="/upgrade" class="hover:underline">AI 기반 업그레이드 제안</a></li>
-          <li><a href="/retarget" class="hover:underline">쿠폰 / 리타겟팅 자동 발송</a></li>
-          <li><a href="/future" class="hover:underline">GPT 챗 연동 시스템</a></li>
-        </ul>
+        <h3 class="text-teal-600 font-semibold text-lg mb-2">🌐 글로벌 확장</h3>
+        <p class="text-sm text-gray-700">다국어, PWA, 인증 자동화, GPT 챗 연동</p>
       </div>
     </div>
   </section>
 
-  <!-- Global System CTA -->
-  <section id="start" class="py-20 text-center bg-white">
-    <h2 class="text-xl font-bold text-green-700 mb-3">🌐 글로벌 확장 시스템</h2>
-    <p class="text-gray-700 max-w-2xl mx-auto mb-6">PWA 앱, 다국어, 국가 인증, 투자 대응까지 모든 글로벌 서비스를 자동화된 플랫폼 풀로 제공합니다.</p>
-    <a href="/start" class="bg-green-700 text-white px-8 py-3 rounded-full hover:bg-green-600">지금 시작하기</a>
-  </section>
-
-  <footer class="bg-gray-100 text-center text-sm text-gray-500 py-6">
+  <!-- Footer -->
+  <footer id="contact" class="bg-gray-100 text-center text-sm text-gray-600 py-6">
     © 2025 AgriNexus World — 글로벌 스마트팜 자동화 플랫폼
   </footer>
+
 </body>
 </html>
