--- a/index.html
+++ b/index.html
@@ -4,103 +4,78 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AgriNexus World | 스마트팜 자동화 플랫폼</title>
+  <title>AgriNexus World | 통합 자동화 플랫폼</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>html { scroll-behavior: smooth; }</style>
 </head>
-<body class="bg-white text-gray-900 font-sans scroll-smooth">
+<body class="bg-white text-gray-900 font-sans">
 
   <!-- Hero Section -->
-  <section class="bg-gradient-to-r from-green-600 to-green-800 text-white py-20 text-center px-6">
-    <h1 class="text-4xl font-bold mb-2">AgriNexus World</h1>
-    <p class="text-lg mb-6">세계 최고 수준의 스마트팜 자동화 플랫폼 – 설계, 계약, 물류, 투자까지 한 번에</p>
-    <div class="flex justify-center flex-wrap gap-4">
-      <a href="#features" class="bg-white text-green-800 px-6 py-2 rounded-full font-semibold hover:bg-gray-100">전체 기능 보기</a>
-      <a href="#contract" class="bg-green-900 px-6 py-2 rounded-full font-semibold hover:bg-green-700 text-white">상담 문의</a>
+  <section class="bg-gradient-to-r from-green-600 to-green-800 text-white py-20 px-6 text-center">
+    <h1 class="text-4xl font-bold mb-4">AgriNexus World</h1>
+    <p class="text-lg max-w-2xl mx-auto">계약, 설계, 물류, 분석, 투자, 글로벌 대응까지 완전 자동화된 스마트팜 플랫폼</p>
+    <div class="mt-6 flex justify-center flex-wrap gap-4">
+      <a href="#contract" class="bg-white text-green-800 px-6 py-2 rounded-full font-semibold hover:bg-gray-100">계약</a>
+      <a href="#design" class="bg-white text-green-800 px-6 py-2 rounded-full font-semibold hover:bg-gray-100">설계</a>
+      <a href="#logistics" class="bg-white text-green-800 px-6 py-2 rounded-full font-semibold hover:bg-gray-100">물류</a>
+      <a href="#report" class="bg-white text-green-800 px-6 py-2 rounded-full font-semibold hover:bg-gray-100">분석</a>
+      <a href="#investment" class="bg-white text-green-800 px-6 py-2 rounded-full font-semibold hover:bg-gray-100">투자</a>
+      <a href="#global" class="bg-white text-green-800 px-6 py-2 rounded-full font-semibold hover:bg-gray-100">글로벌</a>
     </div>
   </section>
 
-  <!-- Feature Overview -->
-  <section id="features" class="py-16 bg-gray-50 px-6">
-    <div class="max-w-6xl mx-auto grid md:grid-cols-3 gap-8 text-sm">
-      <div>
-        <h3 class="text-green-700 font-bold text-lg mb-2">📄 <a href="#contract">계약 자동화</a></h3>
-        <p>계약서 생성, 전자서명, 다국어, PDF 자동 저장 및 제출</p>
-      </div>
-      <div>
-        <h3 class="text-purple-700 font-bold text-lg mb-2">🤖 <a href="#design">AI 설계</a></h3>
-        <p>설계 자동화, 자재 추천, 시뮬레이션 영상 및 음성 생성</p>
-      </div>
-      <div>
-        <h3 class="text-blue-700 font-bold text-lg mb-2">🛰 <a href="#logistics">물류 시스템</a></h3>
-        <p>위성 기반 물류 추적, 수출입 서류, 글로벌 배송 자동화</p>
-      </div>
-      <div>
-        <h3 class="text-pink-600 font-bold text-lg mb-2">📊 <a href="#report">보고서 / 분석</a></h3>
-        <p>ROI 리포트, 대시보드, 이메일 제출 시스템</p>
-      </div>
-      <div>
-        <h3 class="text-orange-600 font-bold text-lg mb-2">💰 <a href="#investment">투자 시스템</a></h3>
-        <p>IR 자동 생성, 요금제 분석, 실시간 투자 제안</p>
-      </div>
-      <div>
-        <h3 class="text-teal-600 font-bold text-lg mb-2">🌐 <a href="#global">글로벌 확장</a></h3>
-        <p>다국어, PWA, 인증 자동화, GPT 챗 연동</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- Detailed Sections -->
-  <section id="contract" class="py-16 px-6 max-w-5xl mx-auto">
-    <h2 class="text-xl font-bold text-green-700 mb-4">📄 계약 자동화</h2>
-    <ul class="list-disc ml-6 space-y-2 text-gray-700">
-      <li>계약서 자동 생성, 조항별 설명, 다국어 변환</li>
+  <!-- Sections -->
+  <section id="contract" class="py-16 px-6 max-w-6xl mx-auto">
+    <h2 class="text-2xl font-bold text-green-700 mb-4">📄 계약 자동화</h2>
+    <ul class="list-disc ml-6 space-y-2 text-gray-800">
+      <li>계약서 자동 생성, 조항별 설명, 다국어 번역</li>
       <li>전자서명 및 PDF 자동 저장/제출</li>
       <li>보안 등급 분류 및 유효기간 자동 알림</li>
     </ul>
   </section>
 
-  <section id="design" class="py-16 px-6 max-w-5xl mx-auto">
-    <h2 class="text-xl font-bold text-purple-700 mb-4">🤖 AI 설계</h2>
-    <ul class="list-disc ml-6 space-y-2 text-gray-700">
-      <li>스마트팜 도면 기반 자동 설계</li>
-      <li>자재, 설비 브랜드 자동 추천</li>
-      <li>3D 시뮬레이션 영상 및 음성 생성</li>
+  <section id="design" class="py-16 px-6 max-w-6xl mx-auto">
+    <h2 class="text-2xl font-bold text-purple-700 mb-4">🤖 AI 설계</h2>
+    <ul class="list-disc ml-6 space-y-2 text-gray-800">
+      <li>도면 기반 설계 자동화</li>
+      <li>자재, 설비 자동 추천</li>
+      <li>3D 시뮬레이션 + 음성 설명 생성</li>
     </ul>
   </section>
 
-  <section id="logistics" class="py-16 px-6 max-w-5xl mx-auto">
-    <h2 class="text-xl font-bold text-blue-700 mb-4">🛰 물류 시스템</h2>
-    <ul class="list-disc ml-6 space-y-2 text-gray-700">
-      <li>실시간 위성 기반 물류 경로 추적</li>
-      <li>글로벌 배송비 비교 자동화</li>
-      <li>수출입 문서 자동 생성 및 통합 제출</li>
+  <section id="logistics" class="py-16 px-6 max-w-6xl mx-auto">
+    <h2 class="text-2xl font-bold text-blue-700 mb-4">🛰 물류 시스템</h2>
+    <ul class="list-disc ml-6 space-y-2 text-gray-800">
+      <li>위성 기반 실시간 물류 추적</li>
+      <li>글로벌 배송비 자동 비교</li>
+      <li>수출입 서류 자동 생성 및 통합</li>
     </ul>
   </section>
 
-  <section id="report" class="py-16 px-6 max-w-5xl mx-auto">
-    <h2 class="text-xl font-bold text-pink-600 mb-4">📊 보고서 / 분석</h2>
-    <ul class="list-disc ml-6 space-y-2 text-gray-700">
-      <li>ROI 분석 리포트 자동 생성</li>
-      <li>성과 기반 대시보드 및 시각화</li>
-      <li>PDF 리포트 이메일 자동 제출</li>
+  <section id="report" class="py-16 px-6 max-w-6xl mx-auto">
+    <h2 class="text-2xl font-bold text-pink-600 mb-4">📊 분석 / 리포트</h2>
+    <ul class="list-disc ml-6 space-y-2 text-gray-800">
+      <li>ROI 리포트 자동 생성 및 PDF 출력</li>
+      <li>성과 대시보드, 조건 기반 리포트 생성</li>
+      <li>이메일 자동 제출, 관리자 저장</li>
     </ul>
   </section>
 
-  <section id="investment" class="py-16 px-6 max-w-5xl mx-auto">
-    <h2 class="text-xl font-bold text-orange-600 mb-4">💰 투자 시스템</h2>
-    <ul class="list-disc ml-6 space-y-2 text-gray-700">
-      <li>IR 문서 자동 생성 및 PDF 출력</li>
-      <li>요금제 및 수익 분석 기반 제안</li>
-      <li>실시간 투자 시나리오 추천</li>
+  <section id="investment" class="py-16 px-6 max-w-6xl mx-auto">
+    <h2 class="text-2xl font-bold text-orange-600 mb-4">💰 투자 자동화</h2>
+    <ul class="list-disc ml-6 space-y-2 text-gray-800">
+      <li>IR 자동 생성 및 제출</li>
+      <li>요금제/수익 분석 및 제안 시스템</li>
+      <li>실시간 투자 대응 시뮬레이션</li>
     </ul>
   </section>
 
-  <section id="global" class="py-16 px-6 max-w-5xl mx-auto">
-    <h2 class="text-xl font-bold text-teal-700 mb-4">🌐 글로벌 확장</h2>
-    <ul class="list-disc ml-6 space-y-2 text-gray-700">
-      <li>다국어 계약 / 보고서 자동 번역</li>
-      <li>PWA 앱 설치형 구성 자동화</li>
-      <li>GPT 챗봇 / 인증 대응 시스템 통합</li>
+  <section id="global" class="py-16 px-6 max-w-6xl mx-auto">
+    <h2 class="text-2xl font-bold text-teal-700 mb-4">🌐 글로벌 확장</h2>
+    <ul class="list-disc ml-6 space-y-2 text-gray-800">
+      <li>PWA 앱 자동 구성, 설치 안내</li>
+      <li>GPT 챗봇 연동, 다국어 자동 변환</li>
+      <li>국가별 인증/규정 자동 반영 시스템</li>
     </ul>
   </section>
 
