--- a/index.html
+++ b/index.html
@@ -4,84 +4,58 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AgriNexus World | 통합 자동화 플랫폼</title>
+  <title>AgriNexus World | 통합 기능 사이트</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>html { scroll-behavior: smooth; }</style>
 </head>
 <body class="bg-white text-gray-900 font-sans">
 
-  <!-- Hero Section -->
-  <section class="bg-gradient-to-r from-green-600 to-green-800 text-white py-20 px-6 text-center">
+  <section class="bg-gradient-to-r from-green-600 to-green-800 text-white py-20 text-center">
     <h1 class="text-4xl font-bold mb-4">AgriNexus World</h1>
-    <p class="text-lg max-w-2xl mx-auto">계약, 설계, 물류, 분석, 투자, 글로벌 대응까지 완전 자동화된 스마트팜 플랫폼</p>
+    <p class="text-lg max-w-2xl mx-auto">실제 작동 가능한 계약, 설계, 물류, 분석, 투자, 글로벌 기능 전체 통합</p>
     <div class="mt-6 flex justify-center flex-wrap gap-4">
       <a href="#contract" class="bg-white text-green-800 px-6 py-2 rounded-full font-semibold hover:bg-gray-100">계약</a>
-      <a href="#design" class="bg-white text-green-800 px-6 py-2 rounded-full font-semibold hover:bg-gray-100">설계</a>
+      <a href="#ai" class="bg-white text-green-800 px-6 py-2 rounded-full font-semibold hover:bg-gray-100">설계</a>
       <a href="#logistics" class="bg-white text-green-800 px-6 py-2 rounded-full font-semibold hover:bg-gray-100">물류</a>
-      <a href="#report" class="bg-white text-green-800 px-6 py-2 rounded-full font-semibold hover:bg-gray-100">분석</a>
+      <a href="#report" class="bg-white text-green-800 px-6 py-2 rounded-full font-semibold hover:bg-gray-100">리포트</a>
       <a href="#investment" class="bg-white text-green-800 px-6 py-2 rounded-full font-semibold hover:bg-gray-100">투자</a>
       <a href="#global" class="bg-white text-green-800 px-6 py-2 rounded-full font-semibold hover:bg-gray-100">글로벌</a>
     </div>
   </section>
 
-  <!-- Sections -->
-  <section id="contract" class="py-16 px-6 max-w-6xl mx-auto">
-    <h2 class="text-2xl font-bold text-green-700 mb-4">📄 계약 자동화</h2>
-    <ul class="list-disc ml-6 space-y-2 text-gray-800">
-      <li>계약서 자동 생성, 조항별 설명, 다국어 번역</li>
-      <li>전자서명 및 PDF 자동 저장/제출</li>
-      <li>보안 등급 분류 및 유효기간 자동 알림</li>
-    </ul>
+  <!-- Feature Iframes -->
+  <section id="contract" class="py-12 px-4 max-w-6xl mx-auto">
+    <h2 class="text-xl font-bold text-green-700 mb-4">📄 계약 기능</h2>
+    <iframe src="./contract/index.html" class="w-full h-[600px] border rounded shadow"></iframe>
   </section>
 
-  <section id="design" class="py-16 px-6 max-w-6xl mx-auto">
-    <h2 class="text-2xl font-bold text-purple-700 mb-4">🤖 AI 설계</h2>
-    <ul class="list-disc ml-6 space-y-2 text-gray-800">
-      <li>도면 기반 설계 자동화</li>
-      <li>자재, 설비 자동 추천</li>
-      <li>3D 시뮬레이션 + 음성 설명 생성</li>
-    </ul>
+  <section id="ai" class="py-12 px-4 max-w-6xl mx-auto">
+    <h2 class="text-xl font-bold text-purple-700 mb-4">🤖 AI 설계</h2>
+    <iframe src="./ai/index.html" class="w-full h-[600px] border rounded shadow"></iframe>
   </section>
 
-  <section id="logistics" class="py-16 px-6 max-w-6xl mx-auto">
-    <h2 class="text-2xl font-bold text-blue-700 mb-4">🛰 물류 시스템</h2>
-    <ul class="list-disc ml-6 space-y-2 text-gray-800">
-      <li>위성 기반 실시간 물류 추적</li>
-      <li>글로벌 배송비 자동 비교</li>
-      <li>수출입 서류 자동 생성 및 통합</li>
-    </ul>
+  <section id="logistics" class="py-12 px-4 max-w-6xl mx-auto">
+    <h2 class="text-xl font-bold text-blue-700 mb-4">🛰 물류 시스템</h2>
+    <iframe src="./satellite/index.html" class="w-full h-[600px] border rounded shadow"></iframe>
   </section>
 
-  <section id="report" class="py-16 px-6 max-w-6xl mx-auto">
-    <h2 class="text-2xl font-bold text-pink-600 mb-4">📊 분석 / 리포트</h2>
-    <ul class="list-disc ml-6 space-y-2 text-gray-800">
-      <li>ROI 리포트 자동 생성 및 PDF 출력</li>
-      <li>성과 대시보드, 조건 기반 리포트 생성</li>
-      <li>이메일 자동 제출, 관리자 저장</li>
-    </ul>
+  <section id="report" class="py-12 px-4 max-w-6xl mx-auto">
+    <h2 class="text-xl font-bold text-pink-600 mb-4">📊 리포트</h2>
+    <iframe src="./report/index.html" class="w-full h-[600px] border rounded shadow"></iframe>
   </section>
 
-  <section id="investment" class="py-16 px-6 max-w-6xl mx-auto">
-    <h2 class="text-2xl font-bold text-orange-600 mb-4">💰 투자 자동화</h2>
-    <ul class="list-disc ml-6 space-y-2 text-gray-800">
-      <li>IR 자동 생성 및 제출</li>
-      <li>요금제/수익 분석 및 제안 시스템</li>
-      <li>실시간 투자 대응 시뮬레이션</li>
-    </ul>
+  <section id="investment" class="py-12 px-4 max-w-6xl mx-auto">
+    <h2 class="text-xl font-bold text-orange-600 mb-4">💰 투자 자동화</h2>
+    <iframe src="./investment/index.html" class="w-full h-[600px] border rounded shadow"></iframe>
   </section>
 
-  <section id="global" class="py-16 px-6 max-w-6xl mx-auto">
-    <h2 class="text-2xl font-bold text-teal-700 mb-4">🌐 글로벌 확장</h2>
-    <ul class="list-disc ml-6 space-y-2 text-gray-800">
-      <li>PWA 앱 자동 구성, 설치 안내</li>
-      <li>GPT 챗봇 연동, 다국어 자동 변환</li>
-      <li>국가별 인증/규정 자동 반영 시스템</li>
-    </ul>
+  <section id="global" class="py-12 px-4 max-w-6xl mx-auto">
+    <h2 class="text-xl font-bold text-teal-600 mb-4">🌐 글로벌 확장</h2>
+    <iframe src="./global/index.html" class="w-full h-[600px] border rounded shadow"></iframe>
   </section>
 
-  <!-- Footer -->
   <footer class="bg-gray-100 text-center text-sm text-gray-600 py-6">
-    © 2025 AgriNexus World — 글로벌 스마트팜 자동화 플랫폼
+    © 2025 AgriNexus World — 실제 작동 가능한 글로벌 자동화 시스템
   </footer>
 </body>
 </html>
