--- a/ai/index.html
+++ b/ai/index.html
@@ -1,1 +1,1 @@
-<h1>ai 기능 페이지 (추후 연결)</h1>
+<html><body style='font-family:sans-serif;padding:2rem'><h1>🤖 스마트팜 AI 설계</h1><p>도면 설계 + 시뮬레이션 영상 자동 생성</p></body></html>
