--- a/contract/index.html
+++ b/contract/index.html
@@ -1,1 +1,1 @@
-<h1>contract 기능 페이지 (추후 연결)</h1>
+<html><body style='font-family:sans-serif;padding:2rem'><h1>📄 계약서 자동 생성기</h1><p>전자서명, 다국어 번역, PDF 저장</p></body></html>
