--- a/global/index.html
+++ b/global/index.html
@@ -1,1 +1,1 @@
-<h1>global 기능 페이지 (추후 연결)</h1>
+<html><body style='font-family:sans-serif;padding:2rem'><h1>🌐 글로벌 확장 시스템</h1><p>PWA, GPT, 다국어 번역, 인증 자동화</p></body></html>
