--- a/investment/index.html
+++ b/investment/index.html
@@ -1,1 +1,1 @@
-<h1>investment 기능 페이지 (추후 연결)</h1>
+<html><body style='font-family:sans-serif;padding:2rem'><h1>💰 투자 IR 자동화</h1><p>요금제 분석 + IR 문서 생성</p></body></html>
