--- a/report/index.html
+++ b/report/index.html
@@ -1,1 +1,1 @@
-<h1>report 기능 페이지 (추후 연결)</h1>
+<html><body style='font-family:sans-serif;padding:2rem'><h1>📊 ROI 리포트 자동화</h1><p>성과 대시보드 + PDF 출력</p></body></html>
