--- a/satellite/index.html
+++ b/satellite/index.html
@@ -1,1 +1,1 @@
-<h1>satellite 기능 페이지 (추후 연결)</h1>
+<html><body style='font-family:sans-serif;padding:2rem'><h1>🛰 위성 물류 추적</h1><p>실시간 위치 기반 물류 시스템</p></body></html>
