--- a/global/index.html
+++ b/global/index.html
@@ -1,1 +1,5 @@
-<html><body style='font-family:sans-serif;padding:2rem'><h1>🌐 글로벌 확장 시스템</h1><p>PWA, GPT, 다국어 번역, 인증 자동화</p></body></html>
+<html><body class='p-6 text-sm font-sans'>
+      <h1 class="text-2xl font-bold mb-4">🌐 글로벌 시스템 통합</h1>
+      <p>다국어 자동 번역 시스템, GPT 연동, PWA 설치 기능 준비 중</p>
+      <button class="bg-teal-600 text-white px-4 py-2 mt-3 rounded">GPT 상담 시작</button>
+    </body></html>
