--- a/index.html
+++ b/index.html
@@ -3,18 +3,14 @@
     <html lang="ko">
     <head><meta charset="UTF-8"><title>AgriNexus World - 메인</title></head>
     <body>
-        <h1>🌍 AgriNexus World - GPT 120기능 통합 자동화</h1>
+        <h1>🌍 AgriNexus World - GPT 120기능 자동화 플랫폼</h1>
         <ul>
-            <li><a href="ai.html">GPT 오퍼레이터</a></li>
-            <li><a href="contract.html">계약 생성</a></li>
-            <li><a href="proposal.html">제안서 생성</a></li>
-            <li><a href="report.html">보고서 생성</a></li>
-            <li><a href="delivery.html">물류 자동화</a></li>
-            <li><a href="satellite.html">위성 분석</a></li>
-            <li><a href="signup.html">회원가입</a></li>
-            <li><a href="email.html">이메일 발송</a></li>
-            <li><a href="pdf.html">PDF 자동 출력</a></li>
-            <li><a href="admin.html">관리자 대시보드</a></li>
+            <li><a href="contract.html">📄 계약 생성기</a></li>
+            <li><a href="proposal.html">📑 제안서 생성기</a></li>
+            <li><a href="report.html">📈 보고서 생성기</a></li>
+            <li><a href="delivery.html">🚚 물류 최적화</a></li>
+            <li><a href="satellite.html">🛰️ 위성 기반 설계</a></li>
+            <li><a href="admin.html">📊 관리자 요약</a></li>
         </ul>
     </body>
     </html>
